--- a/templates/main.html
+++ b/templates/main.html
@@ -19,6 +19,10 @@ table {
   </head>
 
   <body>
+	<center> <h1> MOSAA - Medical JOSAA </h1></center>
+	<center><h3> When medico needs an engineer </h3></center>
+	<br><br>
+	<center>	
 		<form  method="POST">
       	{{ form.csrf_token }}
       	{{ form.college }}
@@ -41,5 +45,6 @@ table {
 			<tr>
 		{% endfor %}
 		</table>
+	</center>
   </body>
 </html>
