--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@ table {
 
   <body>
 	<center> <h1> MOSAA - Medical JOSAA </h1></center>
-	<center><h3> When medico needs an engineer </h3></center>
+	<center><h3> When medico needs an engineer | created by: Ahsan Barkati</h3></center>
 	<br><br>
 	<center>	
 		<form  method="POST">
