Fix category in second round

--- a/templates/home.html
+++ b/templates/home.html
@@ -24,8 +24,8 @@ form {
   </head>
 
   <body>
-	<center> <h1> MOSAA - Medical JOSAA </h1></center>
-	<center><h3> When medico needs an engineer | created by: Ahsan Barkati</h3></center>
+	<center> <h1> MOSAA: The JOSAA alternative for Medical</h1></center>
+	<center><h3> When medico needs an engineer | Created by: Ahsan Barkati</h3></center>
 	<br><br>
 
 	<center>
