--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 <html>
   <head>
 
+  <script data-ad-client="ca-pub-1844894294886502" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <style>
 table, td, th {
   border: 1px solid black;
