--- a/templates/main.html
+++ b/templates/main.html
@@ -25,9 +25,14 @@ form {
 
   <body>
 	<center> <h1> MOSAA: The JOSAA alternative for Medical</h1></center>
-	<center><h3> When medico needs an engineer :) | Created by:
-			<a href="https://linkedin.com/in/ahsanbarkati">Ahsan Barkati</a></h3></center>
-	<br><br>
+	<center><h3> When medico needs an engineer :) </h3>
+		<h3>Created by:
+			<a href="https://linkedin.com/in/ahsanbarkati">Ahsan Barkati</a> 
+			Twitter: <a href="https://twitter.com/ahsan_barkati">@ahsan_barkati</a></h3></center>
+	<hr style="width:50%;text-align:left;margin-left:25%">
+	<br>
+	<br>
+
 	<center>
 		<form  method="POST">
       	{{ form.csrf_token }}
