--- a/templates/home.html
+++ b/templates/home.html
@@ -26,8 +26,13 @@ form {
 
   <body>
 	<center> <h1> MOSAA: The JOSAA alternative for Medical</h1></center>
-	<center><h3> When medico needs an engineer | Created by: Ahsan Barkati</h3></center>
-	<br><br>
+	<center><h3> When medico needs an engineer :) </h3>
+		<h3>Created by:
+			<a href="https://linkedin.com/in/ahsanbarkati">Ahsan Barkati</a> 
+			Twitter: <a href="https://twitter.com/ahsan_barkati">@ahsan_barkati</a></h3></center>
+	<hr style="width:50%;text-align:left;margin-left:25%">
+	<br>
+	<br>
 
 	<center>
 		<h1><a href="/round1">Round-1</a></h1>
