--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,9 @@ form {
 	<center>
 		<h1><a href="/round1">Round-1</a></h1>
 		<h1><a href="/round2">Round-2</a></h1>
+		<h3> Total queries served: {{count}}</h3>
 	</center>
+
 
 	</center>
   </body>
