--- a/templates/home.html
+++ b/templates/home.html
@@ -38,8 +38,13 @@ form {
 		<h1><a href="/round1">Round-1</a></h1>
 		<h1><a href="/round2">Round-2</a></h1>
 		<h3> Total queries served: {{count}}</h3>
-	</center>
 
+
+		<h2>Want to support me?
+			<a href="https://buymeacoffee.com/ahsanbarkati">
+				<img height=50 src={{url_for('static', filename='coffee.png')}}></img>
+			</a>
+	</center>
 
 	</center>
   </body>
