--- a/templates/main.html
+++ b/templates/main.html
@@ -28,8 +28,9 @@ form {
 	<center><h3> When medico needs an engineer :) </h3>
 		<h3>Created by:
 			<a href="https://linkedin.com/in/ahsanbarkati">Ahsan Barkati</a> 
-			Twitter: <a href="https://twitter.com/ahsan_barkati">@ahsan_barkati</a></h3></center>
+			Twitter: <a href="https://twitter.com/ahsan_barkati">@ahsan_barkati</a></h3>
 	<hr style="width:50%;text-align:left;margin-left:25%">
+</center>
 	<br>
 	<br>
 
@@ -66,6 +67,13 @@ form {
 			{% endif %}
 		{% endif %}
 		<h3><a href="/">Back to home</a></h3>
+		<br>
+		<br>
+		<br>
+		<h2>Want to support me?
+			<a href="https://buymeacoffee.com/ahsanbarkati">
+				<img height=50 src={{url_for('static', filename='coffee.png')}}></img>
+			</a>
 	</center>
   </body>
 </html>
